# rust_socket_server

./: Cargo.toml
src/: main.rs
websocket-client/: index.html
