[package]
name = "socket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
chrono = "0.4"
tokio-tungstenite = "0.26.2"
futures = "0.3"
async-channel = "2.3.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
cargo-watch = "8.5.3"
